--- a/package.json
+++ b/package.json
@@ -2,13 +2,22 @@
   "name": "plainkit",
   "version": "1.0.0",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-coffee": "~0.10.1",
-    "grunt-contrib-concat": "~0.4.0",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-watch": "~0.6.1"
+    "browserify": "^10.2.4",
+    "coffeeify": "^1.1.0",
+    "del": "^1.2.0",
+    "gulp": "^3.9.0",
+    "gulp-coffee": "^2.3.1",
+    "gulp-coffeeify": "^0.1.8",
+    "gulp-concat": "^2.6.0",
+    "gulp-if": "^1.2.5",
+    "gulp-livereload": "~3.8.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.3",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6",
+    "jquery": "^2.1.4",
+    "node-bourbon": "^4.2.3",
+    "node-neat": "^1.7.2",
+    "node-reset-scss": "^1.0.1"
   }
 }
