--- a/.htaccess
+++ b/.htaccess
@@ -17,13 +17,13 @@ RewriteEngine on
 # RewriteBase /mysite
 
 # block text files in the content folder from being accessed directly
-RewriteRule ^content/(.*)\.(txt|md|mdown)$ error [R=301,L]
+RewriteRule ^content/(.*)\.(txt|md|mdown)$ index.php [L]
 
 # block all files in the site folder from being accessed directly
-RewriteRule ^site/(.*) error [R=301,L]
+RewriteRule ^site/(.*) index.php [L]
 
 # block all files in the kirby folder from being accessed directly
-RewriteRule ^kirby/(.*) error [R=301,L]
+RewriteRule ^kirby/(.*) index.php [L]
 
 # make panel links work
 RewriteCond %{REQUEST_FILENAME} !-f
