--- a/.htaccess
+++ b/.htaccess
@@ -16,10 +16,18 @@ RewriteEngine on
 #
 # RewriteBase /mysite
 
+# In some enviroments it's necessary to
+# set the RewriteBase to:
+#
+# RewriteBase /
+
 # block text files in the content folder from being accessed directly
 RewriteRule ^content/(.*)\.(txt|md|mdown)$ index.php [L]
 
 # block all files in the site folder from being accessed directly
+# except for requests to plugin assets files
+#RewriteRule ^assets/plugins/([a-zA-Z0-9\.\-_%=]+)/(.*)$ site/plugins/$1/assets/$2 [L,N]
+#RewriteCond $1 !^plugins/[a-zA-Z0-9\.\-_%=]+/assets/.*
 RewriteRule ^site/(.*) index.php [L]
 
 # block all files in the kirby folder from being accessed directly
